asm_examples/test/errors/np/ruleWithoutR.asm
//update of a monitored variable--> error

asm ruleWithoutR

import ../../../STDL/StandardLibrary

signature:

	monitored m: Integer

definitions:

	rule prova = skip

	main rule r_main =	prova[]
